# KAIROS

./: .gitignore  CONTRIBUTING.md  LANGCHAIN_COMPATIBILITY.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt
example_memory/latent/: mem_1768618264140.npz  mem_1768618264149.npz  mem_1768618264158.npz  mem_1768618264166.npz  mem_1768618264175.npz  mem_1768618264184.npz  mem_1768618472987.npz  mem_1768618472994.npz  mem_1768618473002.npz  mem_1768618473010.npz  mem_1768618473018.npz  mem_1768618473028.npz
example_memory_advanced/latent/: mem_1768613554576.npz  mem_1768613554611.npz  mem_1768613554619.npz  mem_1768613554626.npz  mem_1768613554660.npz  mem_1768613554667.npz  mem_1768613554699.npz  mem_1768613554706.npz  mem_1768613554734.npz  mem_1768613554758.npz  mem_1768613554793.npz  mem_1768613554821.npz  mem_1768613554846.npz  mem_1768613554855.npz  mem_1768613554859.npz  mem_1768613554864.npz  mem_1768613554868.npz  mem_1768613554873.npz  mem_1768613554878.npz  mem_1768613554883.npz  mem_1768613554888.npz  mem_1768613554893.npz  mem_1768613554924.npz  mem_1768613554929.npz  mem_1768613554933.npz  mem_1768613554958.npz  mem_1768613554965.npz  mem_1768613554970.npz  mem_1768613554997.npz  mem_1768613555003.npz  mem_1768613555008.npz  mem_1768613555015.npz  mem_1768613555020.npz  mem_1768613555028.npz  mem_1768613555033.npz  mem_1768613555039.npz  mem_1768613555045.npz  mem_1768613555051.npz  mem_1768613555056.npz  mem_1768613555094.npz  (+320 more)
example_memory_compression/latent/: mem_1768618194087.npz  mem_1768618194111.npz  mem_1768618194148.npz  mem_1768618194167.npz  mem_1768618194189.npz  mem_1768618501628.npz  mem_1768618501659.npz  mem_1768618501696.npz  mem_1768618501710.npz  mem_1768618501728.npz
examples/: advanced_usage.py  basic_usage.py  chroma_usage.py  cognitive_mlx_example.py  compression_demo.py  cuda_usage.py  langchain_agent.py
kairos/: __init__.py  compressor.py  encoder.py  feedback.py  memory.py  store.py  utils.py
kairos/backends/: __init__.py  base.py  chroma.py  numpy_store.py
kairos/integrations/: __init__.py  langchain.py
tests/: test_kairos.py  test_llm_features.py
