[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kairos-memory"
version = "1.1.0"
description = "KAIROS - Knowledge-Augmented Intelligent Retrieval and Organizational System for GenAI applications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["memory", "genai", "llm", "vector-store", "semantic-search", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.20.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
mlx = ["mlx>=0.0.5"]
chroma = ["chromadb>=0.4.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]
all = ["mlx>=0.0.5", "chromadb>=0.4.0"]

[project.urls]
Homepage = "https://github.com/yourusername/kairos-memory"
Documentation = "https://github.com/yourusername/kairos-memory#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["kairos*"]
