[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kairos-memory"
version = "1.1.0"
description = "KAIROS - Knowledge-Augmented Intelligent Retrieval and Organizational System for GenAI applications"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.8"
keywords = ["memory", "genai", "llm", "vector-store", "semantic-search", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
transformers = ["sentence-transformers>=2.2.0"]
mlx = ["mlx>=0.0.5"]
chroma = ["chromadb>=0.4.0"]
langchain = ["langchain-core>=0.1.0", "langchain>=0.1.0"]
# Note: For CUDA support, install PyTorch with CUDA separately:
#   pip install torch --index-url https://download.pytorch.org/whl/cu121
# For Intel optimizations:
#   pip install intel-extension-for-pytorch
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]
all = ["mlx>=0.0.5", "chromadb>=0.4.0", "sentence-transformers>=2.2.0"]

[project.urls]
Homepage = "https://github.com/yourusername/kairos-memory"
Documentation = "https://github.com/yourusername/kairos-memory#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["kairos*"]
